Add picture zoom function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
     </article>
 
-    <footer> Copyright - Bernardo Cruz Rohlfs @2021</footer>
+    <div id="foto-grande"></div>
 
     <script src="script.js"></script>
 </body>
